# micracode

./: .gitignore  README.md  package.json
apps/api/src/micracode_api/routers/: generate.py  projects.py
apps/api/tests/: test_generate_cancellation.py  test_model_catalog.py  test_orchestrator.py
apps/desktop/: electron-builder.config.js  package.json
apps/desktop/src/: main.ts  preload.ts
apps/desktop/tauri/resources/backend/: .gitignore
apps/desktop/tauri/scripts/: prepare-bundle.sh
apps/web/: next.config.ts
apps/web/src/app/: page.tsx
apps/web/src/components/chat/: ChatPanel.tsx  V0ChatPanel.tsx
apps/web/src/components/editor/: EditorTopBar.tsx
apps/web/src/components/home/: CheckpointsPanel.tsx  CommandPrompt.tsx  EngineConsole.tsx  HarnessLauncher.tsx  HeroComposer.tsx  RecentTasksSection.tsx  ThreadsPanel.tsx
apps/web/src/components/layout/: TopNav.tsx  WorkspaceShell.tsx
apps/web/src/components/preview/: PreviewPanel.tsx
apps/web/src/lib/: desktop.ts  env.ts
apps/web/src/lib/api/: uiMessage.ts
apps/web/src/store/: uiStore.ts  webContainerStore.ts
apps/web/src/types/: electron.d.ts
desktop/api/: Cargo.toml  README.md
desktop/api/src/: bindings.rs  config.rs  decider.rs  error.rs  main.rs  model_catalog.rs  preview.rs  projection.rs  provider.rs  reaper.rs  schemas.rs  starter.rs  storage.rs  terminal.rs  text_generation.rs  vcs.rs
desktop/api/src/routers/: commands.rs  health.rs  mod.rs  models.rs  preview.rs  projects.rs  receipts.rs  sessions.rs  terminals.rs  threads.rs  vcs.rs
desktop/test-frontend/: README.md
micracode/: pyproject.toml
micracode/src/micracode/: server.py
scripts/: build_frontend.ps1  build_frontend.sh  build_pyinstaller.ps1  build_pyinstaller.sh
