[project]
name = "micracode"
version = "0.1.0"
description = "AI-powered web app builder. Run anywhere with pip install micracode."
requires-python = ">=3.12"
authors = [{ name = "Micracode" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "micracode-core>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "orjson>=3.10.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
micracode = "micracode.cli:app"

[project.urls]
Homepage = "https://github.com/Jamessdevops/micracode"
Source   = "https://github.com/Jamessdevops/micracode"

[tool.uv.sources]
micracode-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/micracode"]
# Force-include built frontend assets even though they are not git-tracked.
artifacts = ["src/micracode/static/**"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
