[package]
name = "micracode-api"
version = "0.1.0"
edition = "2021"
description = "Rust (Axum) reimplementation of the Micracode /v1 backend (projects + models)."
authors = ["Micracode"]
rust-version = "1.77.2"

[[bin]]
name = "micracode-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
once_cell = "1"

# Event-sourced core (PRD §9). Path deps into the Tauri workspace's crates.
core-persistence = { path = "../../apps/desktop/tauri/crates/core-persistence" }
core-orchestration = { path = "../../apps/desktop/tauri/crates/core-orchestration" }
core-provider = { path = "../../apps/desktop/tauri/crates/core-provider" }
core-projection = { path = "../../apps/desktop/tauri/crates/core-projection" }
core-vcs = { path = "../../apps/desktop/tauri/crates/core-vcs" }
core-terminal = { path = "../../apps/desktop/tauri/crates/core-terminal" }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
base64 = "0.22"
ts-rs = { version = "10", features = ["serde-json-impl"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
# Used only to seed a committed file in VCS tests (transitively present via core-vcs).
git2 = { version = "0.19", default-features = false }
